// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cutest renders crazy stuff 1`] = `
<div
  data-css-oypqrq=""
>
  blue
  <div
    className="profile"
  >
    red
    <div
      className="username"
    >
      green
      <div
        className="three"
      >
        <span
          className="inner"
        >
          test
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`cutest renders simple 1`] = `
<div
  data-css-epkc5v=""
>
  This will be blue until hovered.
  <div
    className="profile"
  >
    This font size will be 20px
  </div>
</div>
`;

exports[`cutest use glamor helpers 1`] = `
<div
  data-css-snd14h=""
>
  <div
    className="one"
  >
    <div
      className="two"
    >
      <div
        className="three"
      >
        <span
          className="inner"
        >
          test
        </span>
      </div>
    </div>
  </div>
</div>
`;
